--- a/bank.html
+++ b/bank.html
@@ -67,7 +67,7 @@
                                         <li style="color: white !important">
                                             <i class="fi flaticon-email"></i>
                                             CEO : Nizar BEJAOUI
-                                            Elenys.bejaoui@gmail.com
+                                            nizar.bejaoui@elenys.net
                                         </li>
                                     </ul>
                                 </div>
@@ -265,7 +265,7 @@
                         <a href="counter.html" class="service-item">
                             <div class="image" style="height: 23.3rem">
                                 <img
-                                    src="assets/images/service/banknotecounter.png"
+                                    src="assets/images/service/banknotecounter.jpg"
                                     alt=""
                                 />
                                 <div class="content">
@@ -277,7 +277,7 @@
                         <a href="sorter.html" class="service-item">
                             <div class="image" style="height: 23.3rem">
                                 <img
-                                    src="assets/images/service/img-2.jpg"
+                                    src="assets/images/service/banknotesorter.jpg"
                                     alt=""
                                 />
                                 <div class="content">
@@ -291,42 +291,18 @@
                         <a href="deposit.html" class="service-item">
                             <div class="image" style="height: 23.3rem">
                                 <img
-                                    src="assets/images/service/cash recycle machine.png"
+                                    src="assets/images/service/czsh.jpg"
                                     alt=""
                                 />
                                 <div class="content">
-                                    <h2>Cash Deposit/Recycle Machine</h2>
+                                    <h2>Cash Deposit/</h2>
 
                                     <p style="color: black">BPS® C5</p>
                                 </div>
                             </div>
                         </a>
-                        <a href="shredder.html" class="service-item">
-                            <div class="image" style="height: 23.3rem">
-                                <img
-                                    src="assets/images/service/shredders.jpg"
-                                    alt=""
-                                />
-                                <div class="content">
-                                    <h2>Shredders</h2>
-
-                                    <p style="color: black">
-                                        Horizontal Shredders (HL)
-                                    </p>
-                                </div>
-                            </div>
-                        </a>
-                        <a href="conveyor.html" class="service-item">
-                            <div class="image" style="height: 23.3rem">
-                                <img
-                                    src="assets/images/service/conveyors systems.png"
-                                    alt=""
-                                />
-                                <div class="content">
-                                    <h2>Conveyor Systems</h2>
-                                </div>
-                            </div>
-                        </a>
+                        
+                       
                     </div>
                 </div>
 
@@ -386,7 +362,7 @@
                                             <div class="office-info-text">
                                                 <h2>Email Us</h2>
                                                 <p>CEO : Nizar BEJAOUI</p>
-                                                <p>Elenys.bejaoui@gmail.com</p>
+                                                <p>nizar.bejaoui@elenys.net</p>
                                             </div>
                                         </div>
                                     </div>
@@ -404,7 +380,7 @@
                                             <div class="office-info-text">
                                                 <h2>Call Now</h2>
                                                 <p>+ 216 55 11 60 90</p>
-                                                <p>+971 58 142 1881</p>
+                                                <p>+216 98 188 777</p>
                                             </div>
                                         </div>
                                     </div>
@@ -527,9 +503,9 @@
                                     Tunisia
                                     <br /><br />Email Us<br />
                                     CEO : Nizar BEJAOUI<br />
-                                    Elenys.bejaoui@gmail.com <br /><br />Call
+                                    nizar.bejaoui@elenys.net <br /><br />Call
                                     Now<br />
-                                    + 216 55 11 60 90 <br />+971 58 142 1881
+                                    + 216 55 11 60 90 <br />+216 98 188 777
                                 </div>
                             </div>
                         </div>
