--- a/deposit.html
+++ b/deposit.html
@@ -10,7 +10,7 @@
             type="image/png"
             href="assets/images/favicon.png"
         />
-        <title>Elenys | Cash Deposit/Recycle Machine</title>
+        <title>Elenys | Cash Deposit</title>
         <link href="assets/css/themify-icons.css" rel="stylesheet" />
         <link href="assets/css/font-awesome.min.css" rel="stylesheet" />
         <link href="assets/css/flaticon.css" rel="stylesheet" />
@@ -67,7 +67,7 @@
                                         <li style="color: white !important">
                                             <i class="fi flaticon-email"></i>
                                             CEO : Nizar BEJAOUI
-                                            Elenys.bejaoui@gmail.com
+                                            nizar.bejaoui@elenys.net
                                         </li>
                                     </ul>
                                 </div>
@@ -174,12 +174,12 @@
                     <div class="row">
                         <div class="col col-xs-12">
                             <div class="wpo-breadcumb-wrap">
-                                <h2>Cash Deposit/Recycle Machine</h2>
+                                <h2>Cash Deposit</h2>
                                 <ol class="wpo-breadcumb-wrap">
                                     <li>
                                         <a href="bank.html">Banking Services</a>
                                     </li>
-                                    <li>Cash Deposit/Recycle Machine</li>
+                                    <li>Cash Deposit</li>
                                 </ol>
                             </div>
                         </div>
@@ -215,7 +215,7 @@
                                                     "
                                                 >
                                                     BPS® C5 : Cash
-                                                    Deposit/Recycle Machine
+                                                    Deposit
                                                 </h3>
                                             </div>
                                             <p>
@@ -441,7 +441,7 @@
                                             <div class="office-info-text">
                                                 <h2>Email Us</h2>
                                                 <p>CEO : Nizar BEJAOUI</p>
-                                                <p>Elenys.bejaoui@gmail.com</p>
+                                                <p>nizar.bejaoui@elenys.net</p>
                                             </div>
                                         </div>
                                     </div>
@@ -459,7 +459,7 @@
                                             <div class="office-info-text">
                                                 <h2>Call Now</h2>
                                                 <p>+ 216 55 11 60 90</p>
-                                                <p>+971 58 142 1881</p>
+                                                <p>+216 98 188 777</p>
                                             </div>
                                         </div>
                                     </div>
@@ -582,9 +582,9 @@
                                     Tunisia
                                     <br /><br />Email Us<br />
                                     CEO : Nizar BEJAOUI<br />
-                                    Elenys.bejaoui@gmail.com <br /><br />Call
+                                    nizar.bejaoui@elenys.net <br /><br />Call
                                     Now<br />
-                                    + 216 55 11 60 90 <br />+971 58 142 1881
+                                    + 216 55 11 60 90 <br />+216 98 188 777
                                 </div>
                             </div>
                         </div>
