--- a/service.html
+++ b/service.html
@@ -68,7 +68,7 @@
                                         <li style="color: white !important">
                                             <i class="fi flaticon-email"></i>
                                             CEO : Nizar BEJAOUI
-                                            Elenys.bejaoui@gmail.com
+                                            nizar.bejaoui@elenys.net
                                         </li>
                                     </ul>
                                 </div>
@@ -456,7 +456,7 @@
                         <a href="counter.html" class="service-item">
                             <div class="image" style="height: 23.3rem">
                                 <img
-                                    src="assets/images/service/banknotecounter.png"
+                                    src="assets/images/service/banknotecounter.jpg"
                                     alt=""
                                 />
                                 <div class="content">
@@ -482,32 +482,12 @@
                                     alt=""
                                 />
                                 <div class="content">
-                                    <h2>Cash Deposit/Recycle Machine</h2>
+                                    <h2>Cash Deposit</h2>
                                 </div>
                             </div>
                         </a>
-                        <a class="service-item">
-                            <div class="image" style="height: 23.3rem">
-                                <img
-                                    src="assets/images/service/shredders.jpg"
-                                    alt=""
-                                />
-                                <div class="content">
-                                    <h2>Shredders</h2>
-                                </div>
-                            </div>
-                        </a>
-                        <a class="service-item">
-                            <div class="image" style="height: 23.3rem">
-                                <img
-                                    src="assets/images/service/conveyors systems.png"
-                                    alt=""
-                                />
-                                <div class="content">
-                                    <h2>Conveyor Systems</h2>
-                                </div>
-                            </div>
-                        </a>
+                     
+                        
                     </div>
                 </div>
 
@@ -664,7 +644,7 @@
                                             <div class="office-info-text">
                                                 <h2>Email Us</h2>
                                                 <p>CEO : Nizar BEJAOUI</p>
-                                                <p>Elenys.bejaoui@gmail.com</p>
+                                                <p>nizar.bejaoui@elenys.net</p>
                                             </div>
                                         </div>
                                     </div>
@@ -682,7 +662,7 @@
                                             <div class="office-info-text">
                                                 <h2>Call Now</h2>
                                                 <p>+ 216 55 11 60 90</p>
-                                                <p>+971 58 142 1881</p>
+                                                <p>+216 98 188 777</p>
                                             </div>
                                         </div>
                                     </div>
@@ -805,9 +785,9 @@
                                     Tunisia
                                     <br /><br />Email Us<br />
                                     CEO : Nizar BEJAOUI<br />
-                                    Elenys.bejaoui@gmail.com <br /><br />Call
+                                    nizar.bejaoui@elenys.net <br /><br />Call
                                     Now<br />
-                                    + 216 55 11 60 90 <br />+971 58 142 1881
+                                    + 216 55 11 60 90 <br />+216 98 188 777
                                 </div>
                             </div>
                         </div>
