--- a/shredder.html
+++ b/shredder.html
@@ -67,7 +67,7 @@
                                         <li style="color: white !important">
                                             <i class="fi flaticon-email"></i>
                                             CEO : Nizar BEJAOUI
-                                            Elenys.bejaoui@gmail.com
+                                            nizar.bejaoui@elenys.net
                                         </li>
                                     </ul>
                                 </div>
@@ -355,7 +355,7 @@
                                             <div class="office-info-text">
                                                 <h2>Email Us</h2>
                                                 <p>CEO : Nizar BEJAOUI</p>
-                                                <p>Elenys.bejaoui@gmail.com</p>
+                                                <p>nizar.bejaoui@elenys.net</p>
                                             </div>
                                         </div>
                                     </div>
@@ -373,7 +373,7 @@
                                             <div class="office-info-text">
                                                 <h2>Call Now</h2>
                                                 <p>+ 216 55 11 60 90</p>
-                                                <p>+971 58 142 1881</p>
+                                                <p>+216 98 188 777</p>
                                             </div>
                                         </div>
                                     </div>
@@ -496,9 +496,9 @@
                                     Tunisia
                                     <br /><br />Email Us<br />
                                     CEO : Nizar BEJAOUI<br />
-                                    Elenys.bejaoui@gmail.com <br /><br />Call
+                                    nizar.bejaoui@elenys.net <br /><br />Call
                                     Now<br />
-                                    + 216 55 11 60 90 <br />+971 58 142 1881
+                                    + 216 55 11 60 90 <br />+216 98 188 777
                                 </div>
                             </div>
                         </div>
