--- a/index.html
+++ b/index.html
@@ -343,6 +343,22 @@
                                 </div>
                             </div></a
                         >
+                        <a class="serv" href="bank.html">
+                            <div class="service-item">
+                                <div class="image" style="height: 23.3rem">
+                                    <img
+                                        src="assets/images/service/pronote.jpeg"
+                                        alt=""
+                                    />
+                                    <div class="content">
+                                        <h2>Banking Business</h2>
+                                        <span
+                                            > Pronote 1.5</span
+                                        >
+                                    </div>
+                                </div>
+                            </div></a
+                        >
                         <a class="serv" href="trading.html">
                             <div class="service-item">
                                 <div class="image" style="height: 23.3rem">
@@ -573,7 +589,7 @@
                         <a href="sorter.html" class="service-item">
                             <div class="image" style="height: 23.3rem">
                                 <img
-                                    src="assets/images/service/img-2.jpg"
+                                    src="assets/images/service/banknotesorter.jpg"
                                     alt=""
                                 />
                                 <div class="content">
