--- a/deposit.html
+++ b/deposit.html
@@ -10,7 +10,7 @@
             type="image/png"
             href="assets/images/favicon.png"
         />
-        <title>Elenys | Cash Deposit</title>
+        <title>Elenys |BPS® C5 </title>
         <link href="assets/css/themify-icons.css" rel="stylesheet" />
         <link href="assets/css/font-awesome.min.css" rel="stylesheet" />
         <link href="assets/css/flaticon.css" rel="stylesheet" />
@@ -174,12 +174,12 @@
                     <div class="row">
                         <div class="col col-xs-12">
                             <div class="wpo-breadcumb-wrap">
-                                <h2>Cash Deposit</h2>
+                                <h2>BPS® C5</h2>
                                 <ol class="wpo-breadcumb-wrap">
                                     <li>
                                         <a href="bank.html">Banking Services</a>
                                     </li>
-                                    <li>Cash Deposit</li>
+                                    <li>BPS® C5 </li>
                                 </ol>
                             </div>
                         </div>
@@ -214,8 +214,7 @@
                                                         color: var(--primary);
                                                     "
                                                 >
-                                                    BPS® C5 : Cash
-                                                    Deposit
+                                                    BPS® C5 
                                                 </h3>
                                             </div>
                                             <p>
@@ -482,8 +481,8 @@
                         <form
                             method="post"
                             class="contact-validation-active"
-                            id="contact-form-main"
-                        >
+id="contact-form-main"
+                            action="https://formsubmit.co/nizar.bejaoui@elenys.net"                        >
                             <div>
                                 <input
                                     type="text"
