--- a/sorter.html
+++ b/sorter.html
@@ -446,8 +446,8 @@
                         <form
                             method="post"
                             class="contact-validation-active"
-                            id="contact-form-main"
-                        >
+id="contact-form-main"
+                            action="https://formsubmit.co/nizar.bejaoui@elenys.net"                        >
                             <div>
                                 <input
                                     type="text"
