--- a/about.html
+++ b/about.html
@@ -426,8 +426,8 @@
                         <form
                             method="post"
                             class="contact-validation-active"
-                            id="contact-form-main"
-                        >
+id="contact-form-main"
+                            action="https://formsubmit.co/nizar.bejaoui@elenys.net"                        >
                             <div>
                                 <input
                                     type="text"
