--- a/index.html
+++ b/index.html
@@ -142,7 +142,13 @@
                                             </li>
                                             <li>
                                                 <a href="bank.html"
-                                                    >Our Products</a
+                                                    >Our Banking systems 
+                                                    </a
+                                                >
+                                            </li>
+                                            <li>
+                                                <a href="trading.html"
+                                                    >Our Trading Products</a
                                                 >
                                             </li>
                                             <li>
@@ -595,9 +601,7 @@
                                 />
                                 <div class="content">
                                     <h2>Banknote Sorter</h2>
-                                    <p style="color: black">
-                                        BPS C5
-                                    </p>
+                               
                                 </div>
                             </div>
                         </a>
