--- a/counter.html
+++ b/counter.html
@@ -141,7 +141,13 @@
                                             </li>
                                             <li>
                                                 <a href="bank.html"
-                                                    >Our Products</a
+                                                    >Our Banking systems 
+                                                    </a
+                                                >
+                                            </li>
+                                            <li>
+                                                <a href="trading.html"
+                                                    >Our Trading Products</a
                                                 >
                                             </li>
                                             <li>
