--- a/trading.html
+++ b/trading.html
@@ -141,7 +141,13 @@
                                             </li>
                                             <li>
                                                 <a href="bank.html"
-                                                    >Our Products</a
+                                                    >Our Banking systems 
+                                                    </a
+                                                >
+                                            </li>
+                                            <li>
+                                                <a href="trading.html"
+                                                    >Our Trading Products</a
                                                 >
                                             </li>
                                             <li>
@@ -390,8 +396,7 @@
                                         font-weight: bold;
                                     "
                                 >
-                                    Natural mineral water from Pays
-                                    d'Aix-en-Provence
+                                Water Descaling Systems
                                 </h1>
                                 <p>
                                     It is at a depth of 808 meters that the
