--- a/bank.html
+++ b/bank.html
@@ -283,11 +283,13 @@
                         <a href="sorter.html" class="service-item">
                             <div class="image" style="height: 23.3rem">
                                 <img
-                                    src="assets/images/service/banknotesorter.jpg"
+                                    src="assets/images/service/pronote-1.5.jpg"
                                     alt=""
                                 />
                                 <div class="content">
-                                    <h2>Banknote Sorter</h2>
+                                    <h2>Banknote Counter</h2>
+                                    <p style="color: black">
+                                        G+D Pronote 1.5                                    </p>
                                
                                 </div>
                             </div>
