--- a/TellerCashRecycler.html
+++ b/TellerCashRecycler.html
@@ -10,7 +10,7 @@
             type="image/png"
             href="assets/images/favicon.png"
         />
-        <title>Elenys |Teller Cash Recycler </title>
+        <title>Elenys |Automatic Teller Machine </title>
         <link href="assets/css/themify-icons.css" rel="stylesheet" />
         <link href="assets/css/font-awesome.min.css" rel="stylesheet" />
         <link href="assets/css/flaticon.css" rel="stylesheet" />
@@ -180,12 +180,12 @@
                     <div class="row">
                         <div class="col col-xs-12">
                             <div class="wpo-breadcumb-wrap">
-                                <h2>Teller Cash Recycler</h2>
+                                <h2>Automatic Teller Machine</h2>
                                 <ol class="wpo-breadcumb-wrap">
                                     <li>
                                         <a href="bank.html">Banking Services</a>
                                     </li>
-                                    <li>Teller Cash Recycler </li>
+                                    <li>Automatic Teller Machine </li>
                                 </ol>
                             </div>
                         </div>
@@ -207,7 +207,7 @@
                                 <div class="wpo-project-single-item">
                                     <img
                                         style="margin-bottom: 5rem"
-                                        src="assets/images/teller.png"
+                                        src="assets/images/atm_png-removebg-preview.png"
                                         alt=""
                                     />
                                     <div class="row align-items-center">
@@ -220,19 +220,19 @@
                                                         color: var(--primary);
                                                     "
                                                 >
-                                                    Teller Cash Recycler 
+                                                    Automatic Teller Machine 
                                                 </h3>
                                             </div>
                                             <p>
                                                 <b
                                                     >Tailor-made for a new level
-                                                    of efficiency, the Teller Cash Recycler
+                                                    of efficiency, the Automatic Teller Machine
                                                     precisely fulfills banknote
                                                     processing requirements,
                                                     with outstanding efficiency,
                                                     flexibility, and
                                                     user-friendliness.</b
-                                                ><br /><br />The Teller Cash Recycler has
+                                                ><br /><br />The Automatic Teller Machine has
                                                 been developed to meet the needs
                                                 of small and medium-sized cash
                                                 centers and count rooms, as well
@@ -262,7 +262,7 @@
                                                 competitive advantages.<br /><br /><b
                                                     >Reliable and secure</b
                                                 ><br /><br />The sensor system
-                                                in the Teller Cash Recycler verifies and
+                                                in the Automatic Teller Machine verifies and
                                                 sorts banknotes quickly,
                                                 precisely, and reliably. The
                                                 system excels in the detection
